--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			        <div id="code" style="display: none;">
 			        	<span class="say">亲爱的刘书婷：</span><br>
 						<span class="say"> </span><br>
-                        <span class="say">　　爱你，我的宝儿，喜欢你的小脾气（虽然有时候很想揍你），你的小任性，回顾一下也蛮快的，每天都陪着你竟然都过了这么久了，再等几年也会很快的，等我娶你哦。</span><br>
+                        <span class="say">　　我的宝儿，喜欢你的小脾气（现在跟倔驴一样），你的小任性，回顾一下其实也蛮快的，不知不觉都陪着你过了这么久了，这几年也会很快的，等我娶你哦</span><br>
 
                         <span class="say"><span class="space"></span> -- 杨嘉辉 --</span>
 			        </div>
